<resources>
    <string name="app_name">NGULI</string>
    <string name="title_activity_bottom_navigation_bar">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_cart">Pesanan</string>
    <string name="appbar_home">NGULI</string>
    <string name="title_history">Riwayat</string>
    <string name="title_account">Akun</string>
    <string name="name">Nama</string>
    <string name="description">Deskripsi</string>


    <string-array name="data_name">
        <item>Ahmad </item>
        <item>Ahmid</item>
        <item>Ahmud</item>
        <item>More</item>
        <item>More</item>
        <item>More</item>
    </string-array>

    <string-array name="data_photo">

        <item>"https://asset-a.grid.id/crop/0x0:0x0/700x465/photo/ideafoto/original/9883_2-tidak-mencoba-warna-cat-dan-kain-pada-ruangan-anda.jpg"</item>
        <item>"https://www.twitpay.me/wp-content/uploads/2019/04/WoodWorking.jpg"</item>
        <item>"https://www.goodfreephotos.com/cache/rocks-and-fossils/rock-mining_800.jpg"</item>
        <item>"https://www.goodfreephotos.com/cache/rocks-and-fossils/rock-mining_800.jpg"</item>
        <item>"https://www.goodfreephotos.com/cache/rocks-and-fossils/rock-mining_800.jpg"</item>
        <item>"https://www.goodfreephotos.com/cache/rocks-and-fossils/rock-mining_800.jpg"</item>
    </string-array>

    <string-array name="data_description">
        <item>Tukang Cat</item>
        <item>Tukang Kayu</item>
        <item>Tukang Batu</item>
        <item>Tukang Batu</item>
        <item>Tukang Batu</item>
        <item>Tukang Batu</item>
    </string-array>

    <string-array name="data_lat">
        <item>-7.333797</item>
        <item>-7.374473</item>
        <item>-7.374473</item>
        <item>-7.374473</item>
        <item>-7.374473</item>
        <item>-7.374473</item>
    </string-array>
    <string-array name="data_lang">
        <item>109.206959</item>
        <item>109.240532</item>
        <item>109.240532</item>
        <item>109.240532</item>
        <item>109.240532</item>
        <item>109.240532</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Account">Akun</string>
    <string name="Cart">Keranjang</string>
    <string name="History">Sejarah</string>
    <string name="Home">Beranda</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_setting">Tombol Uji</string>
    <string name="setting">Uji</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="isiKebjakanPrivacy">Isi Kebijakan Privacy</string>
    <string name="email">cintaimaginasi@gmail.com</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="age">Umur</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Simpan</string>
    <string name="field_required" />
    <string name="email_is_not_valid" />
    <string name="setting_page" />
    <string name="field_digit_only" />
    <string name="dark_theme">Dark Theme</string>
    <string name="laki">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="title_activity_t_b_maps">Map</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_email">Email</string>
    <string name="tv_nama_email">Email</string>
    <string name="tv_nomor_telepon">Nomor HP</string>
    <string name="tv_tanggal_lahir">Tanggal Lahir</string>
    <string name="tv_title_voucher">Title Voucher</string>
    <string name="tv_tgl_voucher">21 Desember</string>
    <string name="tv_minimum_voucher">Minimum Transasksi</string>
    <string name="tv_content_syarat_voucher">aa</string>
    <string name="tv_syarat_voucher_title"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="tv_content_cara_voucher">aaaa</string>
    <string name="tv_content_info_title">Contenttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaatttttttttttttttttt</string>
    <string name="tv_info_title">Title</string>
    <string name="tv_voucher_title">Diskon 50 % DUARRR</string>
    <string name="tv_bundle_item_title">Judul Bundle</string>
    <string name="tv_bundle_item_content">Isi nya Bundle item</string>
    <string name="option_get_place">Title</string>
    <string name="default_info_title">Info</string>
    <string name="default_info_snippet">Snippet</string>
    <string name="pick_place">Pick Plcae</string>
    <string name="maps_api_key">AIzaSyC7Xyv2yogvVBSrbLPZArZZ6muk1kyA7L0</string>
    <string name="title_activity_c_c_maps">Map</string>

</resources>